# deltasafe

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  crypto.rs  discovery.rs  lib.rs  main.rs  server.rs  sync.rs
test-folder/: deneme.txt
test_data/source/: test.txt
tests/: integration_tests.rs  unit_tests.rs
