[package]
name = "deltasafe"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
blake3 = "1.5"
aes = "0.8"
rand = "0.8"
hex = "0.4"
cipher = { version = "0.4", features = ["block-padding"] }
cbc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
